0.3.6

* Requires the latest version of Outthentic (0.4.2 ) to ensure Powershell support

0.3.5 2018-11-08

* New feature - sparrow task save/restore

0.3.4 2018-11-01

* Hot fix to run locally installed plugins
* Minor documentation fixes

0.3.3 2018-11-01

* Task box spec files in YAML format - #25

* Restore pod doc

* Fix for "Can't build after perl version 5.26 or higher" - #26

* Installing plugins from local source

* Index update - retry to fetch in case of "Network Connect Timeout Error"

0.3.2 2018-10-18

* Changes file dates fixed

0.3.1 2018-10-18

* Hotfix for task/plg run for Linux platforms

0.3.0 2018-10-18

* Offline mode support

* Windows support

* Rewrite platform dependable code to pure Perl

0.2.53 2017-12-04

* Plg\_run - hot fix for --format parameter resolution

0.2.52 2017-11-29

* Task\_run - hot fix for --format parameter resolution

0.2.51 2017-11-13

* Install plugin - add Agent header as `sparrow` to count statistics ( TBD )
* Add sparrow.yaml to documentation file and support `--format` parameter

0.2.50  2017-09-30

* sparrow plg run, sparrow task run - PERL5LIB uses absolute paths

0.2.49  2017-09-27

Fix for #10 - `plg man for private plugins`

0.2.48  2017-07-25

* PYTHONLIB - make path to ./python-lib - absolute

0.2.47 2017-07-13

* Alternative name for README file set by `doc` field in sparrow.json
* Use the latest version of outthentic 
* Add documentation about sparrow_version, python_version

0.2.46 ???

0.2.45 2017-07-13

* Fix some pip install issues 
* Declare sparrow version at sparrow.json to require Sparrow of certain version

0.2.44 2017-07-11

* Hotfix: PYTHONPATH set for `task run`

0.2.43 2017-07-11

* Support for experimental feature - now you can set python version in sparrow.json to make `plg install` command use proper pip (pip or pip3) when install dependencies

0.2.42 2017-07-11
